--- a/www elements/css/style.css
+++ b/www elements/css/style.css
@@ -6,7 +6,7 @@ font-family: 'Saira Condensed', sans-serif; */
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-
+  max-width: 100%;
 }
 
 /* sekcja header */
@@ -309,7 +309,7 @@ header button {
   flex-direction: column;
   justify-content: space-around;
   min-height: 100vh;
-  ;
+
 }
 
 #skillsTitle {
@@ -321,6 +321,7 @@ header button {
   margin-top: 5%;
   height: 120px;
   width: 200px;
+  overflow: hidden;
 }
 
 .module p:nth-of-type(2) {
@@ -398,14 +399,75 @@ header button {
 
 .portfolio {
   background-color: #1e1e1e;
-  height: 200vh;
 }
 
 .portfolio * {
-  font-family: 'Saira Condensed', sans-serif;
+  font-family: 'Saira', sans-serif;
 }
 
 .portfolio>p {
   font-weight: bold;
   color: #FFF;
+  text-transform: uppercase;
+  font-size: 25px;
+  padding: 15px 10px;
+  text-align: center;
+}
+
+.project {
+  margin-bottom: 5%;
+}
+
+.project img {
+  max-height: 20%;
+  max-width: 100%;
+  max-height: 50vh;
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
+}
+
+.project:nth-of-type(odd) {
+  background-color: #FF4F2C;
+}
+
+.project:nth-of-type(even) {
+  background-color: #0170BA;
+}
+
+.description {
+  padding: 7.5% 0;
+}
+
+.description p {
+  text-align: left;
+  color: white;
+  padding-left: 10%;
+}
+
+.description :nth-child(1) {
+  text-transform: uppercase;
+  border-bottom: solid white;
+  width: 90%;
+  font-size: 18px;
+}
+
+.description :nth-child(2) {
+  font-size: 12px;
+  padding-right: 10%;
+}
+
+@media(orientation: landscape) {
+  .project {
+    display: flex;
+    margin: 0 5% 5% 5%;
+    flex-grow: 1;
+    align-items: stretch;
+  }
+
+  .project img {
+    width: 100%;
+    height: auto;
+  }
+
 }
