--- a/www elements/css/style.css
+++ b/www elements/css/style.css
@@ -682,6 +682,22 @@ section.motto {
   display: block;
 }
 
+.images {
+  position: relative;
+}
+
+.overlay {
+  position: absolute;
+  display: none;
+  width: 100%;
+  height: 100%;
+  transition: 1;
+  top: 0;
+  left: 0;
+  background-color: blue;
+  transition: 5s;
+}
+
 @media (orientation: portrait) and (min-width: 411px) {
   .hobby p {
     font-size: 30px;
@@ -700,7 +716,7 @@ section.motto {
     width: 100%;
   }
 
-  .hobby img {
+  .hobby .images {
     width: 50%;
   }
 }
@@ -708,5 +724,10 @@ section.motto {
 @media (orientation: landscape) and (min-width: 1024px) {
   .hobby p {
     font-size: 60px;
+  }
+
+  .images:hover>.overlay {
+    display: block;
+    cursor: pointer;
   }
 }
