--- a/www elements/css/style.css
+++ b/www elements/css/style.css
@@ -669,6 +669,8 @@ section.motto {
 
 /* hobby section */
 
+
+
 .hobby p {
   font-size: 25px;
   font-family: 'Saira Condensed', sans-serif;
@@ -688,15 +690,31 @@ section.motto {
 
 .overlay {
   position: absolute;
-  display: none;
   width: 100%;
   height: 100%;
-  transition: 1;
-  top: 0;
-  left: 0;
-  background-color: blue;
-  transition: 5s;
+  background-color: rgba(255, 0, 255, 0);
+
 }
+
+.overlay p {
+  color: white;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.overlay,
+.overlay p,
+img {
+  transition: 1s;
+}
+
+.images img {
+  z-index: 1;
+}
+
 
 @media (orientation: portrait) and (min-width: 411px) {
   .hobby p {
@@ -708,7 +726,7 @@ section.motto {
   .hobby {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    width: 100%
   }
 
   .hobby p {
@@ -718,6 +736,7 @@ section.motto {
 
   .hobby .images {
     width: 50%;
+    height: auto;
   }
 }
 
@@ -726,8 +745,90 @@ section.motto {
     font-size: 60px;
   }
 
+  .images:hover img {
+    filter: blur(5px);
+  }
+
   .images:hover>.overlay {
     display: block;
-    cursor: pointer;
+    cursor: default;
+    z-index: 2;
   }
+
+  .images:nth-of-type(1):hover>.overlay {
+    background-color: rgba(255, 79, 44, 0.7);
+  }
+
+  .images:nth-of-type(2):hover>.overlay {
+    background-color: rgba(0, 128, 128, 0.7);
+  }
+
+  .images:nth-of-type(3):hover>.overlay {
+    background-color: rgba(128, 128, 0, 0.7);
+  }
+
+  .images:nth-of-type(4):hover>.overlay {
+    background-color: rgba(0, 128, 0, 0.7);
+  }
+
+  .images:hover>.overlay p {
+    opacity: 1;
+  }
+}
+
+
+/*contact section */
+
+section.contact {
+  background-color: #000;
+
+}
+
+.contact input,
+.contact button {
+  font-family: 'Saira', sans-serif;
+}
+
+.contact p {
+  color: #FFF;
+  text-transform: uppercase;
+  text-align: center;
+  font-family: 'Saira', sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+  padding: 50px 0 40px 0;
+}
+
+.contact form {
+  display: block;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+.contact form input {
+  display: block;
+  width: 100%;
+  line-height: 36px;
+  margin: 10px auto;
+}
+
+.contact form input:last-of-type {
+  display: block;
+  height: 300px;
+  margin: 10px auto;
+}
+
+.contact form button {
+  background-color: transparent;
+  border: 2px solid white;
+  text-transform: uppercase;
+  font-family: 'Saira', sans-serif;
+  font-size: 14px;
+  line-height: 40px;
+  color: white;
+  width: 100%;
+}
+
+.socialmedia li {
+  color: white;
 }
