--- a/www elements/css/style.css
+++ b/www elements/css/style.css
@@ -66,7 +66,6 @@ aside a {
 
 .active {
   opacity: 1;
-  color: white;
 }
 
 header {
@@ -383,7 +382,7 @@ header button {
   flex-direction: column;
   justify-content: space-around;
   min-height: 100vh;
-
+  position: relative;
 }
 
 #skillsTitle {
@@ -392,6 +391,15 @@ header button {
 }
 
 .module {
+  position: relative;
+  right: 30%;
+  opacity: 0;
+  transition: 3s;
+}
+
+.active {
+  right: 0;
+  opacity: 1;
   margin-bottom: 2.5%;
 }
 
